DOI-94 UI improvements

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -1,11 +1,11 @@
-${project.parent.artifactId}.title=Disa_Interoperabilidade
+${project.parent.artifactId}.title=Disa Interoperabilidade
 ${project.parent.artifactId}.manage.options=Gerir resultados
 ${project.parent.artifactId}.map.identifiers=Mapear Identificadores
 ${project.parent.artifactId}.viral.load.status=Estado de Carga Viral
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSADO
 ${project.parent.artifactId}.viral.load.status.ALL=TODOS
 ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NÃO PROCESSADO
-${project.parent.artifactId}.DUPLICATED_REQUEST_ID=ID DA REQUISIÇÃO DUPLICADO
+${project.parent.artifactId}.DUPLICATED_REQUEST_ID=ID da requisição duplicado
 ${project.parent.artifactId}.viral.load.status.PENDING=PENDENTE
 ${project.parent.artifactId}.list.viral.load.results=Mapeamento de NIDs de Resultados Não Processados
 ${project.parent.artifactId}.lista.resultados.laboratoriais333=Lista de Resultados Laboratoriais
@@ -23,15 +23,15 @@ ${project.parent.artifactId}.viralload.result.log=Carga Viral Log
 ${project.parent.artifactId}.viralload.result.coded=Carga Viral Coded
 ${project.parent.artifactId}.viralload.delete=Remover
 ${project.parent.artifactId}.viralload.delete.error=Ocorreu um erro inesperado. Por favor, tente novamente.
-${project.parent.artifactId}.viralload.delete.successful=Carga Viral removida com sucesso.
+${project.parent.artifactId}.viralload.delete.successful=Resultado laboratorial removido com sucesso.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Remover o Resultado ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reagendar
 ${project.parent.artifactId}.viralload.reschedule.successful=Carga Viral reagendada com sucesso.
 ${project.parent.artifactId}.viralload.reallocate=Realocar
-${project.parent.artifactId}.viralload.reallocate.successful=Carga Viral realocada com sucesso.
+${project.parent.artifactId}.viralload.reallocate.successful=Resultado laboratorial {0} realocado para US {1} ({2}) com sucesso.
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Digite o nome da Unidade Sanitária
 ${project.parent.artifactId}.status=Estado
-${project.parent.artifactId}.frm.status=Estado da Carga Viral
+${project.parent.artifactId}.frm.status=Estado do resultado
 ${project.parent.artifactId}.location=Localiz.
 ${project.parent.artifactId}.frm.location=Localiza\uFFFD\uFFFDo
 ${project.parent.artifactId}.analysis.date.time=Data de análise
@@ -51,19 +51,19 @@ ${project.parent.artifactId}.patient=Paciente do Disa
 ${project.parent.artifactId}.btn.map=Mapear
 ${project.parent.artifactId}.select.patient=Seleccione um paciente para mapeamento
 ${project.parent.artifactId}.no.viral.load=Não existem resultados de carga viral com status
-${project.parent.artifactId}.no.viral.load.form=Não existem resultados de carga viral para os critérios de pesquisa
+${project.parent.artifactId}.no.viral.load.form=Não existem resultados laboratoriais para os critérios de pesquisa seleccionados.
 ${project.parent.artifactId}.start.date=Data Inicial
 ${project.parent.artifactId}.end.date=Data Final
 ${project.parent.artifactId}.error.startDate=Data Inicial deve ser informada
 NotNull.searchForm.startDate=Data Inicial deve ser informada
 typeMismatch.searchForm.startDate=Data Inicial não é válida
-${project.parent.artifactId}.error.endDate=Data final deve ser informada
-NotNull.searchForm.endDate=Data final deve ser informada
+${project.parent.artifactId}.error.endDate=Data Final deve ser informada
+NotNull.searchForm.endDate=Data Final deve ser informada
 ${project.parent.artifactId}.not.processing.cause=Causa de não processamento
 ${project.parent.artifactId}.NID_NOT_FOUND=NID inexistente no SESP
 ${project.parent.artifactId}.NO_RESULT=FSR sem resultado
 ${project.parent.artifactId}.DUPLICATE_NID=NID duplicado no SESP
-${project.parent.artifactId}.FLAGGED_FOR_REVIEW=Sinalizado p rever
+${project.parent.artifactId}.FLAGGED_FOR_REVIEW=Sinalizado para revisão
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
 ${project.parent.artifactId}.requestId=ID da requisição
