--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-${project.parent.artifactId}.title=Disa_Interoperability
+${project.parent.artifactId}.title=Disa Interoperability
 ${project.parent.artifactId}.map.identifiers=Map Identifiers
 ${project.parent.artifactId}.manage=Query Viral Load Results
 ${project.parent.artifactId}.manage.options=Manage
@@ -12,7 +12,7 @@ ${project.parent.artifactId}.viral.load.status=Viral Load Status
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSED
 ${project.parent.artifactId}.viral.load.status.ALL=ALL
 ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NOT PROCESSED
-${project.parent.artifactId}.DUPLICATED_REQUEST_ID=DUPLICATED REQUEST ID
+${project.parent.artifactId}.DUPLICATED_REQUEST_ID=Duplicated request ID
 ${project.parent.artifactId}.viral.load.status.PENDING=PENDING
 ${project.parent.artifactId}.status=Status
 ${project.parent.artifactId}.frm.status=Result Status
@@ -35,12 +35,12 @@ ${project.parent.artifactId}.viralload.result.log= Viral Load Log
 ${project.parent.artifactId}.viralload.result.coded= Viral Load Coded
 ${project.parent.artifactId}.viralload.delete=Delete
 ${project.parent.artifactId}.viralload.delete.error=An unexpected error occurred. Please try again.
-${project.parent.artifactId}.viralload.delete.successful=Viral Load was deleted successfully.
+${project.parent.artifactId}.viralload.delete.successful=Lab result was deleted successfully.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab Result ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reschedule
 ${project.parent.artifactId}.viralload.reschedule.successful=Viral Load was rescheduled successfully.
 ${project.parent.artifactId}.viralload.reallocate=Reallocate
-${project.parent.artifactId}.viralload.reallocate.successful=Viral Load was reallocated successfully.
+${project.parent.artifactId}.viralload.reallocate.successful=Lab result {0} was reallocated to HF {1} ({2}) successfully.
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Type the Health Facility name
 ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.btn.export=Export
@@ -51,7 +51,7 @@ ${project.parent.artifactId}.patient=Patient from Disa
 ${project.parent.artifactId}.btn.map=Map
 ${project.parent.artifactId}.select.patient=Select patient to map
 ${project.parent.artifactId}.no.viral.load=No viral load results with status
-${project.parent.artifactId}.no.viral.load.form=No viral load results for the search criterias
+${project.parent.artifactId}.no.viral.load.form=No lab results for the selected search criteria.
 ${project.parent.artifactId}.start.date=Start Date
 ${project.parent.artifactId}.end.date=End Date
 ${project.parent.artifactId}.error.startDate=Start Date must be informed
