Add not processing reason filters, and link to map NID

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -59,11 +59,14 @@ NotNull.searchForm.startDate=Start Date must be informed
 typeMismatch.searchForm.startDate=Start Date is an invalid date
 ${project.parent.artifactId}.error.endDate=End Date must be informed
 NotNull.searchForm.endDate=End Date must be informed
-${project.parent.artifactId}.not.processing.cause=Cause for Not Processing
-${project.parent.artifactId}.NID_NOT_FOUND=NID does not exist in EPTS
-${project.parent.artifactId}.NO_RESULT=FSR has no results
-${project.parent.artifactId}.DUPLICATE_NID=NID duplicated in EPTS
-${project.parent.artifactId}.FLAGGED_FOR_REVIEW=Flagged for review
+${project.parent.artifactId}.notProcessingCause=Cause for Not Processing
+${project.parent.artifactId}.notProcessingCause.ALL=ALL
+${project.parent.artifactId}.notProcessingCause.NID_NOT_FOUND=NID does not exist in EPTS
+${project.parent.artifactId}.notProcessingCause.NO_RESULT=FSR has no results
+${project.parent.artifactId}.notProcessingCause.DUPLICATE_NID=NID duplicated in EPTS
+${project.parent.artifactId}.notProcessingCause.FLAGGED_FOR_REVIEW=Flagged for review
+${project.parent.artifactId}.notProcessingCause.DUPLICATED_REQUEST_ID=Duplicated request ID
+ID da requisição duplicado
 ${project.parent.artifactId}.error.patient.required=Select patient to add
 ${project.parent.artifactId}.error.requestId=The unique identifier of the sample must be informed
 ${project.parent.artifactId}.requestId=Request ID
