--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -59,11 +59,13 @@ NotNull.searchForm.startDate=Data Inicial deve ser informada
 typeMismatch.searchForm.startDate=Data Inicial não é válida
 ${project.parent.artifactId}.error.endDate=Data Final deve ser informada
 NotNull.searchForm.endDate=Data Final deve ser informada
-${project.parent.artifactId}.not.processing.cause=Causa de não processamento
-${project.parent.artifactId}.NID_NOT_FOUND=NID inexistente no SESP
-${project.parent.artifactId}.NO_RESULT=FSR sem resultado
-${project.parent.artifactId}.DUPLICATE_NID=NID duplicado no SESP
-${project.parent.artifactId}.FLAGGED_FOR_REVIEW=Sinalizado para revisão
+${project.parent.artifactId}.notProcessingCause=Causa de não processamento
+${project.parent.artifactId}.notProcessingCause.ALL=TODOS
+${project.parent.artifactId}.notProcessingCause.NID_NOT_FOUND=NID inexistente no SESP
+${project.parent.artifactId}.notProcessingCause.NO_RESULT=FSR sem resultado
+${project.parent.artifactId}.notProcessingCause.DUPLICATE_NID=NID duplicado no SESP
+${project.parent.artifactId}.notProcessingCause.FLAGGED_FOR_REVIEW=Sinalizado para revisão
+${project.parent.artifactId}.notProcessingCause.DUPLICATED_REQUEST_ID=ID da requisição duplicado
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
 ${project.parent.artifactId}.requestId=ID da requisição
