Refactor map patients controller and main css

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -43,6 +43,7 @@ ${project.parent.artifactId}.viralload.reallocate=Reallocate
 ${project.parent.artifactId}.viralload.reallocate.successful=Lab result {0} was reallocated to HF {1} ({2}) successfully.
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Type the Health Facility name
 ${project.parent.artifactId}.map.nid=Map NID
+${project.parent.artifactId}.viralload.map.successful=NID successfuly mapped.
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
 ${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Search Laboratory Results
