* Refactor map NID paths  * Remove unused views  * Create separate controller for reallocation and org unit search

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -40,6 +40,7 @@ ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab
 ${project.parent.artifactId}.viralload.reschedule=Reschedule
 ${project.parent.artifactId}.viralload.reschedule.successful=Viral Load was rescheduled successfully.
 ${project.parent.artifactId}.viralload.reallocate=Reallocate
+${project.parent.artifactId}.viralload.reallocate.title=Reallocate lab result
 ${project.parent.artifactId}.viralload.reallocate.successful=Lab result {0} was reallocated to HF {1} ({2}) successfully.
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Type the Health Facility name
 ${project.parent.artifactId}.map.nid=Map NID
