--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -28,6 +28,7 @@ ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Remover o 
 ${project.parent.artifactId}.viralload.reschedule=Reagendar
 ${project.parent.artifactId}.viralload.reschedule.successful=Carga Viral reagendada com sucesso.
 ${project.parent.artifactId}.viralload.reallocate=Realocar
+${project.parent.artifactId}.viralload.reallocate.title=Realocar resultado laboratorial
 ${project.parent.artifactId}.viralload.reallocate.successful=Resultado laboratorial {0} realocado para US {1} ({2}) com sucesso.
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Digite o nome da Unidade Sanitária
 ${project.parent.artifactId}.status=Estado
