Refactor org unit code

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -22,7 +22,6 @@ ${project.parent.artifactId}.viralload.result.copy=Resultado de Carga Viral
 ${project.parent.artifactId}.viralload.result.log=Carga Viral Log
 ${project.parent.artifactId}.viralload.result.coded=Carga Viral Coded
 ${project.parent.artifactId}.viralload.delete=Remover
-${project.parent.artifactId}.viralload.delete.error=Ocorreu um erro inesperado. Por favor, tente novamente.
 ${project.parent.artifactId}.viralload.delete.successful=Resultado laboratorial removido com sucesso.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Remover o Resultado ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reagendar
@@ -72,3 +71,6 @@ ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adic
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
 ${project.parent.artifactId}.requestId=ID da requisição
 NotBlank.reallocateForm.healthFacilityLabCode=A US de requisição deve ser infromada
+${project.parent.artifactId}.unexpected.error=Ocorreu um erro inesperado. Por favor, tente novamente.
+${project.parent.artifactId}.orgunit.get.error=Erro ao carregar unidade sanitária {0}.
+${project.parent.artifactId}.orgunit.search.error=Erro ao pesquisar unidades sanitárias.
