--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -34,7 +34,6 @@ ${project.parent.artifactId}.viralload.result.copy= Viral Load Copy
 ${project.parent.artifactId}.viralload.result.log= Viral Load Log
 ${project.parent.artifactId}.viralload.result.coded= Viral Load Coded
 ${project.parent.artifactId}.viralload.delete=Delete
-${project.parent.artifactId}.viralload.delete.error=An unexpected error occurred. Please try again.
 ${project.parent.artifactId}.viralload.delete.successful=Lab result was deleted successfully.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab Result ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reschedule
@@ -68,8 +67,10 @@ ${project.parent.artifactId}.notProcessingCause.NO_RESULT=FSR has no results
 ${project.parent.artifactId}.notProcessingCause.DUPLICATE_NID=NID duplicated in EPTS
 ${project.parent.artifactId}.notProcessingCause.FLAGGED_FOR_REVIEW=Flagged for review
 ${project.parent.artifactId}.notProcessingCause.DUPLICATED_REQUEST_ID=Duplicated request ID
-ID da requisição duplicado
 ${project.parent.artifactId}.error.patient.required=Select patient to add
 ${project.parent.artifactId}.error.requestId=The unique identifier of the sample must be informed
 ${project.parent.artifactId}.requestId=Request ID
 NotBlank.reallocateForm.healthFacilityLabCode=The Requisition Health Unit must be informed
+${project.parent.artifactId}.unexpected.error=An unexpected error occurred. Please try again.
+${project.parent.artifactId}.orgunit.get.error=Error fetching org unit {0}.
+${project.parent.artifactId}.orgunit.search.error=Error searching org units.
