Improve error handling

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -73,4 +73,4 @@ ${project.parent.artifactId}.requestId=Request ID
 NotBlank.reallocateForm.healthFacilityLabCode=The Requisition Health Unit must be informed
 ${project.parent.artifactId}.unexpected.error=An unexpected error occurred. Please try again.
 ${project.parent.artifactId}.orgunit.get.error=Error fetching org unit {0}.
-${project.parent.artifactId}.orgunit.search.error=Error searching org units.
+${project.parent.artifactId}.orgunit.search.error=Error searching org units. Please try again.
