--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -73,4 +73,4 @@ ${project.parent.artifactId}.requestId=ID da requisição
 NotBlank.reallocateForm.healthFacilityLabCode=A US de requisição deve ser infromada
 ${project.parent.artifactId}.unexpected.error=Ocorreu um erro inesperado. Por favor, tente novamente.
 ${project.parent.artifactId}.orgunit.get.error=Erro ao carregar unidade sanitária {0}.
-${project.parent.artifactId}.orgunit.search.error=Erro ao pesquisar unidades sanitárias.
+${project.parent.artifactId}.orgunit.search.error=Erro ao pesquisar unidades sanitárias. Por favor, tente novamente.
