--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,7 +1,8 @@
 ${project.parent.artifactId}.title=Disa Interoperability
 ${project.parent.artifactId}.map.identifiers=Map Identifiers
 ${project.parent.artifactId}.manage=Query Viral Load Results
-${project.parent.artifactId}.manage.options=Manage
+${project.parent.artifactId}.manage.table.header=Manage
+${project.parent.artifactId}.manage.actions=Actions ▼
 ${project.parent.artifactId}.list.viral.load.results=Mapping of Unprocessed Results
 ${project.parent.artifactId}.lista.resultados.laboratoriais333=Laboratory Results List
 ${project.parent.artifactId}.list.viral.load.results.staging.server=Search of Laboratory Results
