--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -1,5 +1,6 @@
 ${project.parent.artifactId}.title=Disa Interoperabilidade
-${project.parent.artifactId}.manage.options=Gerir resultados
+${project.parent.artifactId}.manage.table.header=Gerir resultados
+${project.parent.artifactId}.manage.actions=Acções ▼
 ${project.parent.artifactId}.map.identifiers=Mapear Identificadores
 ${project.parent.artifactId}.viral.load.status=Estado de Carga Viral
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSADO
