--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -38,7 +38,7 @@ ${project.parent.artifactId}.viralload.delete=Delete
 ${project.parent.artifactId}.viralload.delete.successful=Lab result was deleted successfully.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab Result ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reschedule
-${project.parent.artifactId}.viralload.reschedule.successful=Viral Load was rescheduled successfully.
+${project.parent.artifactId}.viralload.reschedule.successful=Lab result was rescheduled successfully.
 ${project.parent.artifactId}.viralload.reallocate=Reallocate
 ${project.parent.artifactId}.viralload.reallocate.title=Reallocate lab result
 ${project.parent.artifactId}.viralload.reallocate.successful=Lab result {0} was reallocated to HF {1} ({2}) successfully.
@@ -75,3 +75,5 @@ NotBlank.reallocateForm.healthFacilityLabCode=The Requisition Health Unit must b
 ${project.parent.artifactId}.unexpected.error=An unexpected error occurred. Please try again.
 ${project.parent.artifactId}.orgunit.get.error=Error fetching org unit {0}.
 ${project.parent.artifactId}.orgunit.search.error=Error searching org units. Please try again.
+${project.parent.artifactId}.health.facility.required=At least one HF should be informed.
+${project.parent.artifactId}.config.sisma.codes.error=The HF SISMA codes have not been configured in the global property {0}.
