Add export and column visibility button

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -46,6 +46,7 @@ ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Type the He
 ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.viralload.map.successful=NID successfuly mapped.
 ${project.parent.artifactId}.btn.export=Export
+${project.parent.artifactId}.btn.columns=Columns
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
 ${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Search Laboratory Results
 ${project.parent.artifactId}.openmrs.list.patients=Patients in EPTS
