--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -46,6 +46,7 @@ ${project.parent.artifactId}.updated.at=Actualizado no servidor de integração
 ${project.parent.artifactId}.map.nid=Mapear NID
 ${project.parent.artifactId}.viralload.map.successful=NID mapeado com sucesso.
 ${project.parent.artifactId}.btn.export=Exportar
+${project.parent.artifactId}.btn.columns=Colunas
 ${project.parent.artifactId}.select.viral.load.status=Insira as datas para a pesquisa
 ${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Pesquisa de Resultados Laboratoriais
 ${project.parent.artifactId}.openmrs.list.patients=Pacientes no SESP
