DOI-102 Translation and UI/UX Improvements

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -16,11 +16,12 @@ ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NOT PROCESSED
 ${project.parent.artifactId}.DUPLICATED_REQUEST_ID=Duplicated request ID
 ${project.parent.artifactId}.viral.load.status.PENDING=PENDING
 ${project.parent.artifactId}.status=Status
-${project.parent.artifactId}.frm.status=Result Status
+${project.parent.artifactId}.frm.status=Sync Status
 ${project.parent.artifactId}.location=Location
 ${project.parent.artifactId}.analysis.date.time=Analysis Date
 ${project.parent.artifactId}.authorised.date.time=Authorised Date
 ${project.parent.artifactId}.sisma.code=SISMA Code
+${project.parent.artifactId}.sisma.code.ALL=ALL
 ${project.parent.artifactId}.requesting.facility.name=Requisition Health Unit
 ${project.parent.artifactId}.requesting.district.name=Requisition District
 ${project.parent.artifactId}.referring.request.id=Order number
