--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -32,12 +32,13 @@ ${project.parent.artifactId}.viralload.reallocate.title=Realocar resultado labor
 ${project.parent.artifactId}.viralload.reallocate.successful=Resultado laboratorial {0} realocado para US {1} ({2}) com sucesso.
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Digite o nome da Unidade Sanitária
 ${project.parent.artifactId}.status=Estado
-${project.parent.artifactId}.frm.status=Estado do resultado
+${project.parent.artifactId}.frm.status=Estado de sincronização
 ${project.parent.artifactId}.location=Localiz.
 ${project.parent.artifactId}.frm.location=Localiza\uFFFD\uFFFDo
 ${project.parent.artifactId}.analysis.date.time=Data de análise
 ${project.parent.artifactId}.authorised.date.time=Data de validação
 ${project.parent.artifactId}.sisma.code=Codigo da US
+${project.parent.artifactId}.sisma.code.ALL=TODOS
 ${project.parent.artifactId}.requesting.facility.name=US de requisição
 ${project.parent.artifactId}.requesting.district.name=Distrito de requisição
 ${project.parent.artifactId}.referring.request.id=ID de referencimento
@@ -46,7 +47,7 @@ ${project.parent.artifactId}.updated.at=Actualizado no servidor de integração
 ${project.parent.artifactId}.map.nid=Mapear NID
 ${project.parent.artifactId}.viralload.map.successful=NID mapeado com sucesso.
 ${project.parent.artifactId}.btn.export=Exportar
-${project.parent.artifactId}.btn.columns=Colunas
+${project.parent.artifactId}.btn.columns=Escolher colunas
 ${project.parent.artifactId}.select.viral.load.status=Insira as datas para a pesquisa
 ${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Pesquisa de Resultados Laboratoriais
 ${project.parent.artifactId}.openmrs.list.patients=Pacientes no SESP
@@ -63,7 +64,7 @@ typeMismatch.searchForm.startDate=Data Inicial não é válida
 ${project.parent.artifactId}.error.endDate=Data Final deve ser informada
 NotNull.searchForm.endDate=Data Final deve ser informada
 ${project.parent.artifactId}.notProcessingCause=Causa de não processamento
-${project.parent.artifactId}.notProcessingCause.ALL=TODOS
+${project.parent.artifactId}.notProcessingCause.ALL=TODAS
 ${project.parent.artifactId}.notProcessingCause.NID_NOT_FOUND=NID inexistente no SESP
 ${project.parent.artifactId}.notProcessingCause.NO_RESULT=FSR sem resultado
 ${project.parent.artifactId}.notProcessingCause.DUPLICATE_NID=NID duplicado no SESP
