--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -42,7 +42,7 @@ ${project.parent.artifactId}.sisma.code=Codigo da US
 ${project.parent.artifactId}.sisma.code.ALL=TODOS
 ${project.parent.artifactId}.requesting.facility.name=US de requisição
 ${project.parent.artifactId}.requesting.district.name=Distrito de requisição
-${project.parent.artifactId}.referring.request.id=ID de referencimento
+${project.parent.artifactId}.referring.request.id=ID de referência
 ${project.parent.artifactId}.created.at=Criado no servidor de integração
 ${project.parent.artifactId}.updated.at=Actualizado no servidor de integração
 ${project.parent.artifactId}.map.nid=Mapear NID
