DOI-153 Adapt current VL Data structure to receive also CD4 results
 * Rename Disa to LabResult, rename generic lab result properties

 * Add summary at end of sync

 * Add subclasses for CD4 and HIV Viral Load lab results

 * Remove unused excel report

 * Refactor map, re-schedule and reallocate

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -32,6 +32,7 @@ ${project.parent.artifactId}.nid=NID
 ${project.parent.artifactId}.gender=Gender
 ${project.parent.artifactId}.age=Age
 ${project.parent.artifactId}.request.id=Request ID
+${project.parent.artifactId}.lab.result=Result
 ${project.parent.artifactId}.viralload.result.copy= Viral Load Copy
 ${project.parent.artifactId}.viralload.result.log= Viral Load Log
 ${project.parent.artifactId}.viralload.result.coded= Viral Load Coded
