--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -19,6 +19,7 @@ ${project.parent.artifactId}.nid=NID
 ${project.parent.artifactId}.gender=Sexo
 ${project.parent.artifactId}.age=Idade
 ${project.parent.artifactId}.request.id=ID da requisição
+${project.parent.artifactId}.lab.result=Resultado
 ${project.parent.artifactId}.viralload.result.copy=Resultado de Carga Viral
 ${project.parent.artifactId}.viralload.result.log=Carga Viral Log
 ${project.parent.artifactId}.viralload.result.coded=Carga Viral Coded
