DOI-155 Adapt manage results interface to include CD4 result types

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -18,6 +18,8 @@ ${project.parent.artifactId}.submit=Submeter
 ${project.parent.artifactId}.nid=NID
 ${project.parent.artifactId}.gender=Sexo
 ${project.parent.artifactId}.age=Idade
+${project.parent.artifactId}.lab.result=Resultado
+${project.parent.artifactId}.lab.result.type=Tipo de Resultado
 ${project.parent.artifactId}.request.id=ID da requisição
 ${project.parent.artifactId}.lab.result=Resultado
 ${project.parent.artifactId}.viralload.result.copy=Resultado de Carga Viral
