--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -87,3 +87,6 @@ ${project.parent.artifactId}.api.authentication.error=Unable to connect to integ
 ${project.parent.artifactId}.result.unauthorized=The user does not have permission to access results from the HF {0}. Contact the OpenMRS administrator to verify the Disa module configurations.
 ${project.parent.artifactId}.result.unauthorized.generic=The user does not have permission to access results from one of the HF. Contact the OpenMRS administrator to verify the Disa module configurations.
 ${project.parent.artifactId}.result.not.found=The lab result was not found on integration server.
+${project.parent.artifactId}.typeOfResult.ALL=All
+${project.parent.artifactId}.typeOfResult.HIVVL=HIV Viral Load
+${project.parent.artifactId}.typeOfResult.CD4=CD4 Count
