--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -87,3 +87,6 @@ ${project.parent.artifactId}.api.authentication.error=Não foi possível conecta
 ${project.parent.artifactId}.result.unauthorized=O utilizador não tem acesso aos resultados da US {0}. Contacte o administrador do OpenMRS para verificar as configurações do módulo Disa.
 ${project.parent.artifactId}.result.unauthorized.generic=O utilizador não tem acesso aos resultados de uma das US. Contacte o administrador do OpenMRS para verificar as configurações do módulo Disa.
 ${project.parent.artifactId}.result.not.found=O resultado laboratorial não foi encontrado servidor de integração.
+${project.parent.artifactId}.typeOfResult.HIVVL=Carga Viral HIV
+${project.parent.artifactId}.typeOfResult.ALL=TODOS
+${project.parent.artifactId}.typeOfResult.CD4=CD4 Absoluto
