DOI-134 Configure spring security JDBC authentication
* Update bad credentials message

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -83,7 +83,7 @@ ${project.parent.artifactId}.orgunit.get.error=Erro ao carregar unidade sanitár
 ${project.parent.artifactId}.orgunit.search.error=Erro ao pesquisar unidades sanitárias. Por favor, tente novamente.
 ${project.parent.artifactId}.health.facility.required=Pelo menos uma US deve ser informada.
 ${project.parent.artifactId}.config.sisma.codes.error=Os códigos SISMA da US não foram configurados na 'global property' {0}.
-${project.parent.artifactId}.api.authentication.error=Não foi possível conectar ao servidor integração, utilizador ou senha incorrectas. Contacte o administrador do OpenMRS para verificar as configurações do módulo Disa.
+${project.parent.artifactId}.api.authentication.error=A configuração de credencial está incorreta no módulo Disa. Contacte o administrador do OpenMRS para corrigi-la.
 ${project.parent.artifactId}.result.unauthorized=O utilizador não tem acesso aos resultados da US {0}. Contacte o administrador do OpenMRS para verificar as configurações do módulo Disa.
 ${project.parent.artifactId}.result.unauthorized.generic=O utilizador não tem acesso aos resultados de uma das US. Contacte o administrador do OpenMRS para verificar as configurações do módulo Disa.
 ${project.parent.artifactId}.result.not.found=O resultado laboratorial não foi encontrado servidor de integração.
