DOI-158 Changes on Reasons for not processing

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -70,9 +70,8 @@ NotNull.searchForm.endDate=End Date must be informed
 ${project.parent.artifactId}.notProcessingCause=Cause for Not Processing
 ${project.parent.artifactId}.notProcessingCause.ALL=ALL
 ${project.parent.artifactId}.notProcessingCause.NID_NOT_FOUND=NID does not exist in EPTS
-${project.parent.artifactId}.notProcessingCause.NO_RESULT=FSR has no results
+${project.parent.artifactId}.notProcessingCause.INVALID_RESULT=Invalid result
 ${project.parent.artifactId}.notProcessingCause.DUPLICATE_NID=NID duplicated in EPTS
-${project.parent.artifactId}.notProcessingCause.FLAGGED_FOR_REVIEW=Flagged for review
 ${project.parent.artifactId}.notProcessingCause.DUPLICATED_REQUEST_ID=Duplicated request ID
 ${project.parent.artifactId}.error.patient.required=Select patient to add
 ${project.parent.artifactId}.error.requestId=The unique identifier of the sample must be informed
