--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -70,9 +70,8 @@ NotNull.searchForm.endDate=Data Final deve ser informada
 ${project.parent.artifactId}.notProcessingCause=Causa de não processamento
 ${project.parent.artifactId}.notProcessingCause.ALL=TODAS
 ${project.parent.artifactId}.notProcessingCause.NID_NOT_FOUND=NID inexistente no SESP
-${project.parent.artifactId}.notProcessingCause.NO_RESULT=FSR sem resultado
+${project.parent.artifactId}.notProcessingCause.INVALID_RESULT=Resultado inválido
 ${project.parent.artifactId}.notProcessingCause.DUPLICATE_NID=NID duplicado no SESP
-${project.parent.artifactId}.notProcessingCause.FLAGGED_FOR_REVIEW=Sinalizado para revisão
 ${project.parent.artifactId}.notProcessingCause.DUPLICATED_REQUEST_ID=ID da requisição duplicado
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
