DOI-121 Handle patients without identifiers when mapping NIDs

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -75,6 +75,7 @@ ${project.parent.artifactId}.notProcessingCause.DUPLICATE_NID=NID duplicado no S
 ${project.parent.artifactId}.notProcessingCause.FLAGGED_FOR_REVIEW=Sinalizado para revisão
 ${project.parent.artifactId}.notProcessingCause.DUPLICATED_REQUEST_ID=ID da requisição duplicado
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
+${project.parent.artifactId}.error.patient.required.nid=O paciente seleccionado não tem NID no OpenMRS. Deve primeiro adicionar NID nos dados demográficos do paciente no OpenMRS e depois mapear em Disa Interoperabilidade.
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
 ${project.parent.artifactId}.requestId=ID da requisição
 NotBlank.reallocateForm.healthFacilityLabCode=A US de requisição deve ser infromada
