--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -75,6 +75,7 @@ ${project.parent.artifactId}.notProcessingCause.DUPLICATE_NID=NID duplicated in 
 ${project.parent.artifactId}.notProcessingCause.FLAGGED_FOR_REVIEW=Flagged for review
 ${project.parent.artifactId}.notProcessingCause.DUPLICATED_REQUEST_ID=Duplicated request ID
 ${project.parent.artifactId}.error.patient.required=Select patient to add
+${project.parent.artifactId}.error.patient.required.nid=The selected patient has no NID on OpenMRS. You should first add the NID to the patients demographic data and then map on Disa Interoperabilidade.
 ${project.parent.artifactId}.error.requestId=The unique identifier of the sample must be informed
 ${project.parent.artifactId}.requestId=Request ID
 NotBlank.reallocateForm.healthFacilityLabCode=The Requisition Health Unit must be informed
