DOI-173 Search data Export
* Upgrade Apache POI
* Change processingDate to LocalDateTime
* Refactor staging server report
* Remove unused ApiAuthRest, RestUtil, DateUtil, WardEnum, methods in GenericUtil
* Validate presence of start date and end date when exporting

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -66,6 +66,7 @@ ${project.parent.artifactId}.error.startDate=Start Date must be informed
 NotNull.searchForm.startDate=Start Date must be informed
 typeMismatch.searchForm.startDate=Start Date is an invalid date
 ${project.parent.artifactId}.error.endDate=End Date must be informed
+${project.parent.artifactId}.error.date.range=In order to export the data, Start Date and End Date must be informed.
 NotNull.searchForm.endDate=End Date must be informed
 ${project.parent.artifactId}.notProcessingCause=Cause for Not Processing
 ${project.parent.artifactId}.notProcessingCause.ALL=ALL
