--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -37,7 +37,7 @@ ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Digite o no
 ${project.parent.artifactId}.viralload.reallocate.confirmation.javascript=Realocar o Resultado ${requestId} para ${orgUnit}?
 ${project.parent.artifactId}.status=Estado
 ${project.parent.artifactId}.frm.status=Estado de sincronização
-${project.parent.artifactId}.location=Localiz.
+${project.parent.artifactId}.location=Localização
 ${project.parent.artifactId}.frm.location=Localiza\uFFFD\uFFFDo
 ${project.parent.artifactId}.analysis.date.time=Data de análise
 ${project.parent.artifactId}.authorised.date.time=Data de validação
@@ -66,6 +66,7 @@ ${project.parent.artifactId}.error.startDate=Data Inicial deve ser informada
 NotNull.searchForm.startDate=Data Inicial deve ser informada
 typeMismatch.searchForm.startDate=Data Inicial não é válida
 ${project.parent.artifactId}.error.endDate=Data Final deve ser informada
+${project.parent.artifactId}.error.date.range=Para exportar dados indique primeiro na pesquisa a Data Inicial e a Data Final (em que os resultados foram criados no servidor de integracao).
 NotNull.searchForm.endDate=Data Final deve ser informada
 ${project.parent.artifactId}.notProcessingCause=Causa de não processamento
 ${project.parent.artifactId}.notProcessingCause.ALL=TODAS
