--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -66,7 +66,7 @@ ${project.parent.artifactId}.error.startDate=Data Inicial deve ser informada
 NotNull.searchForm.startDate=Data Inicial deve ser informada
 typeMismatch.searchForm.startDate=Data Inicial não é válida
 ${project.parent.artifactId}.error.endDate=Data Final deve ser informada
-${project.parent.artifactId}.error.date.range=Para exportar dados indique primeiro na pesquisa a Data Inicial e a Data Final (em que os resultados foram criados no servidor de integracao).
+${project.parent.artifactId}.error.date.range=Para exportar dados, efectue primeiro uma pesquisa informando a Data Inicial e a Data Final (em que os resultados foram criados no servidor de integração).
 NotNull.searchForm.endDate=Data Final deve ser informada
 ${project.parent.artifactId}.notProcessingCause=Causa de não processamento
 ${project.parent.artifactId}.notProcessingCause.ALL=TODAS
