DOI-173 Search data Export
* Remove localização column
* Fix authorized date
* Fix Type on SISMA code column
* Remove order by and search, which had no effect on export
* Rename file to "Lab Results..."

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -41,7 +41,7 @@ ${project.parent.artifactId}.location=Localização
 ${project.parent.artifactId}.frm.location=Localiza\uFFFD\uFFFDo
 ${project.parent.artifactId}.analysis.date.time=Data de análise
 ${project.parent.artifactId}.authorised.date.time=Data de validação
-${project.parent.artifactId}.sisma.code=Codigo da US
+${project.parent.artifactId}.sisma.code=Código da US
 ${project.parent.artifactId}.sisma.code.ALL=TODOS
 ${project.parent.artifactId}.requesting.facility.name=US de requisição
 ${project.parent.artifactId}.requesting.district.name=Distrito de requisição
