DOI-123 Include the NIDs that were mapped in success message

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -49,7 +49,7 @@ ${project.parent.artifactId}.referring.request.id=ID de referência
 ${project.parent.artifactId}.created.at=Criado no servidor de integração
 ${project.parent.artifactId}.updated.at=Actualizado no servidor de integração
 ${project.parent.artifactId}.map.nid=Mapear NID
-${project.parent.artifactId}.viralload.map.successful=NID mapeado com sucesso.
+${project.parent.artifactId}.viralload.map.successful=NID Disa {0} mapeado com NID TARV {1}.
 ${project.parent.artifactId}.btn.export=Exportar
 ${project.parent.artifactId}.btn.columns=Escolher colunas
 ${project.parent.artifactId}.select.viral.load.status=Insira as datas para a pesquisa
