--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -49,7 +49,7 @@ ${project.parent.artifactId}.viralload.reallocate.successful=Lab result {0} was 
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Type the Health Facility name
 ${project.parent.artifactId}.viralload.reallocate.confirmation.javascript=Reallocate lab result ${requestId} to ${orgUnit}?
 ${project.parent.artifactId}.map.nid=Map NID
-${project.parent.artifactId}.viralload.map.successful=NID successfuly mapped.
+${project.parent.artifactId}.viralload.map.successful=NID Disa {0} successfuly mapped to NID TARV {1}.
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.btn.columns=Columns
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
