--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -19,6 +19,7 @@ ${project.parent.artifactId}.status=Status
 ${project.parent.artifactId}.frm.status=Sync Status
 ${project.parent.artifactId}.location=Location
 ${project.parent.artifactId}.analysis.date.time=Analysis Date
+${project.parent.artifactId}.harvest.date=Specimen Date
 ${project.parent.artifactId}.authorised.date.time=Result authorization Date
 ${project.parent.artifactId}.sisma.code=SISMA Code
 ${project.parent.artifactId}.sisma.code.ALL=All
