--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -40,6 +40,7 @@ ${project.parent.artifactId}.frm.status=Estado de sincronização
 ${project.parent.artifactId}.location=Localização
 ${project.parent.artifactId}.frm.location=Localiza\uFFFD\uFFFDo
 ${project.parent.artifactId}.analysis.date.time=Data de análise
+${project.parent.artifactId}.harvest.date=Data da colheita
 ${project.parent.artifactId}.authorised.date.time=Data de autorização
 ${project.parent.artifactId}.sisma.code=Código da US
 ${project.parent.artifactId}.sisma.code.ALL=Todos
