DOI-218 Show HF name in Código da US dropdown
* Ignore content of HEAD request
* Correct HF search filter
* Load OrgUnits on search form

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -42,8 +42,9 @@ ${project.parent.artifactId}.frm.location=Localiza\uFFFD\uFFFDo
 ${project.parent.artifactId}.analysis.date.time=Data de análise
 ${project.parent.artifactId}.harvest.date=Data da colheita
 ${project.parent.artifactId}.authorised.date.time=Data de autorização
+${project.parent.artifactId}.hf=US
+${project.parent.artifactId}.hf.ALL=Todas
 ${project.parent.artifactId}.sisma.code=Código da US
-${project.parent.artifactId}.sisma.code.ALL=Todos
 ${project.parent.artifactId}.requesting.facility.name=US de requisição
 ${project.parent.artifactId}.requesting.district.name=Distrito de requisição
 ${project.parent.artifactId}.referring.request.id=ID de referência
