--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -21,8 +21,9 @@ ${project.parent.artifactId}.location=Location
 ${project.parent.artifactId}.analysis.date.time=Analysis Date
 ${project.parent.artifactId}.harvest.date=Specimen Date
 ${project.parent.artifactId}.authorised.date.time=Result authorization Date
+${project.parent.artifactId}.hf=HF
+${project.parent.artifactId}.hf.ALL=All
 ${project.parent.artifactId}.sisma.code=SISMA Code
-${project.parent.artifactId}.sisma.code.ALL=All
 ${project.parent.artifactId}.requesting.facility.name=Requisition Health Unit
 ${project.parent.artifactId}.requesting.district.name=Requisition District
 ${project.parent.artifactId}.referring.request.id=Order number
