DOI-237 Mapeamento de NID: Interface enhancement

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -51,6 +51,7 @@ ${project.parent.artifactId}.referring.request.id=ID de referência
 ${project.parent.artifactId}.created.at=Criado no servidor de integração
 ${project.parent.artifactId}.updated.at=Actualizado no servidor de integração
 ${project.parent.artifactId}.map.nid=Mapear NID
+${project.parent.artifactId}.map.no.identifiers=O paciente selecionado não tem idenficatores para mapear.
 ${project.parent.artifactId}.viralload.map.successful=NID Disa {0} mapeado com NID TARV {1}.
 ${project.parent.artifactId}.btn.export=Exportar
 ${project.parent.artifactId}.btn.columns=Escolher colunas
@@ -59,7 +60,7 @@ ${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Pesquisa de Res
 ${project.parent.artifactId}.openmrs.list.patients=Pacientes no SESP
 ${project.parent.artifactId}.patient=Paciente do Disa
 ${project.parent.artifactId}.btn.map=Mapear
-${project.parent.artifactId}.select.patient=Seleccione um paciente para mapeamento
+${project.parent.artifactId}.select.patient=Seleccione um paciente para mapeamento.
 ${project.parent.artifactId}.no.viral.load=Não existem resultados de carga viral com status
 ${project.parent.artifactId}.no.viral.load.form=Não existem resultados laboratoriais para os critérios de pesquisa seleccionados.
 ${project.parent.artifactId}.start.date=Data Inicial
