--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -51,6 +51,7 @@ ${project.parent.artifactId}.viralload.reallocate.successful=Lab result {0} was 
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Type the Health Facility name
 ${project.parent.artifactId}.viralload.reallocate.confirmation.javascript=Reallocate lab result ${requestId} to ${orgUnit}?
 ${project.parent.artifactId}.map.nid=Map NID
+${project.parent.artifactId}.map.no.identifiers=The selected patient has no identifiers to map with.
 ${project.parent.artifactId}.viralload.map.successful=NID Disa {0} successfuly mapped to NID TARV {1}.
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.btn.columns=Columns
@@ -59,7 +60,7 @@ ${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Search Laborato
 ${project.parent.artifactId}.openmrs.list.patients=Patients in EPTS
 ${project.parent.artifactId}.patient=Patient from Disa
 ${project.parent.artifactId}.btn.map=Map
-${project.parent.artifactId}.select.patient=Select patient to map
+${project.parent.artifactId}.select.patient=Select a patient to map.
 ${project.parent.artifactId}.no.viral.load=No viral load results with status
 ${project.parent.artifactId}.no.viral.load.form=No lab results for the selected search criteria.
 ${project.parent.artifactId}.start.date=Start Date
