--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -94,5 +94,5 @@ ${project.parent.artifactId}.result.not.found=The lab result was not found on in
 ${project.parent.artifactId}.typeOfResult.ALL=All
 ${project.parent.artifactId}.typeOfResult.HIVVL=HIV Viral Load
 ${project.parent.artifactId}.typeOfResult.CD4=CD4 Count
-${project.parent.artifactId}.syncStatus.lastExecution=Last synchronization completed on {0}, repeats at each {1}.
-${project.parent.artifactId}.syncStatus.currentExecution=Currently synchronizing ({0}), started on {1}.
+${project.parent.artifactId}.syncStatus.lastExecution=Last synchronization completed on <b>{0}</b> at <b>{1}</b>, repeats at each <b>{2}</b>.
+${project.parent.artifactId}.syncStatus.currentExecution=Currently synchronizing (<b>{0}</b>), started on <b>{1}<b/> at <b>{2}</b>.
