DOI-237 Mapeamento de NID: Interface enhancement

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 ${project.parent.artifactId}.title=Disa Interoperability
-${project.parent.artifactId}.map.identifiers=Map Identifiers
+${project.parent.artifactId}.map.identifiers=Disa NID and EPTS NID mapping
 ${project.parent.artifactId}.manage=Query Viral Load Results
 ${project.parent.artifactId}.manage.table.header=Manage
 ${project.parent.artifactId}.manage.actions=Actions ▼
