Fix org unit not found message.

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -92,6 +92,7 @@ ${project.parent.artifactId}.result.unauthorized=O utilizador não tem acesso ao
 ${project.parent.artifactId}.result.unauthorized.generic=O utilizador não tem acesso aos resultados de uma das US. Contacte o administrador do OpenMRS para verificar as configurações do módulo Disa.
 ${project.parent.artifactId}.result.no.internet=Para usar o módulo DISA Interoperabilidade deve estar conectado a internet. Se já estiver conectado, contacte o administrador do OpenMRS para verificar as configurações do módulo Disa.
 ${project.parent.artifactId}.result.not.found=O resultado laboratorial não foi encontrado servidor de integração.
+${project.parent.artifactId}.orgunit.not.found=A US não foi encontrada no servidor de integração.
 ${project.parent.artifactId}.typeOfResult.HIVVL=Carga Viral HIV
 ${project.parent.artifactId}.typeOfResult.ALL=Todos
 ${project.parent.artifactId}.typeOfResult.CD4=CD4 Absoluto
