--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -92,6 +92,7 @@ ${project.parent.artifactId}.result.unauthorized=The user does not have permissi
 ${project.parent.artifactId}.result.unauthorized.generic=The user does not have permission to access results from one of the HF. Contact the OpenMRS administrator to verify the Disa module configurations.
 ${project.parent.artifactId}.result.no.internet=In order to use the DISA Interoperability module you must be connected to the internet. If you are already connected, contact the OpenMRS administrator to verify the Disa module configurations.
 ${project.parent.artifactId}.result.not.found=The lab result was not found on integration server.
+${project.parent.artifactId}.orgunit.not.found=The org unit was not found on integration server.
 ${project.parent.artifactId}.typeOfResult.ALL=All
 ${project.parent.artifactId}.typeOfResult.HIVVL=HIV Viral Load
 ${project.parent.artifactId}.typeOfResult.CD4=CD4 Count
