DOI-257 NID Mapping error message

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -53,6 +53,7 @@ ${project.parent.artifactId}.viralload.reallocate.confirmation.javascript=Reallo
 ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.map.no.identifiers=The selected patient has no identifiers to map with.
 ${project.parent.artifactId}.viralload.map.successful=NID Disa {0} successfuly mapped to NID TARV {1}.
+${project.parent.artifactId}.viralload.map.wrong.status=The result to map is "{0}". It should be "Not processed" with cause "NID does not exist in EPTS".
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.btn.columns=Columns
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
