--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -53,6 +53,7 @@ ${project.parent.artifactId}.updated.at=Actualizado no servidor de integração
 ${project.parent.artifactId}.map.nid=Mapear NID
 ${project.parent.artifactId}.map.no.identifiers=O paciente selecionado não tem idenficatores para mapear.
 ${project.parent.artifactId}.viralload.map.successful=NID Disa {0} mapeado com NID TARV {1}.
+${project.parent.artifactId}.viralload.map.wrong.status=O resultado a mapear está no estado "{0}", enquanto devia estar "Não processado" com causa "NID inexistente no SESP".
 ${project.parent.artifactId}.btn.export=Exportar
 ${project.parent.artifactId}.btn.columns=Escolher colunas
 ${project.parent.artifactId}.select.viral.load.status=Insira as datas para a pesquisa
