DOI-237 Improve the message informing about the lack of connectivity between SESP and integ server

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -91,7 +91,7 @@ ${project.parent.artifactId}.config.sisma.codes.error=The HF SISMA codes have no
 ${project.parent.artifactId}.api.authentication.error=Unable to connect to integration server due to incorrect credentials. Contact the OpenMRS administrator to verify the Disa module configurations.
 ${project.parent.artifactId}.result.unauthorized=The user does not have permission to access results from the HF {0}. Contact the OpenMRS administrator to verify the Disa module configurations.
 ${project.parent.artifactId}.result.unauthorized.generic=The user does not have permission to access results from one of the HF. Contact the OpenMRS administrator to verify the Disa module configurations.
-${project.parent.artifactId}.result.no.internet=In order to use the DISA Interoperability module you must be connected to the internet. If you are already connected, contact the OpenMRS administrator to verify the Disa module configurations.
+${project.parent.artifactId}.result.no.internet=In order to use the DISA Interoperability module you must be connected to the integration server. Contact the OpenMRS administrator to verify the Disa module configurations.
 ${project.parent.artifactId}.result.not.found=The lab result was not found on integration server.
 ${project.parent.artifactId}.orgunit.not.found=The org unit was not found on integration server.
 ${project.parent.artifactId}.typeOfResult.ALL=All
