--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -98,5 +98,6 @@ ${project.parent.artifactId}.typeOfResult.ALL=All
 ${project.parent.artifactId}.typeOfResult.HIVVL=HIV Viral Load
 ${project.parent.artifactId}.typeOfResult.CD4=CD4 Count
 ${project.parent.artifactId}.typeOfResult.TBLAM=TB LAM
+${project.parent.artifactId}.typeOfResult.CRAG=CRAG
 ${project.parent.artifactId}.syncStatus.lastExecution=Last synchronization completed on <b>{0}</b> at <b>{1}</b>, repeats at each <b>{2}</b>.
 ${project.parent.artifactId}.syncStatus.currentExecution=Currently synchronizing (<b>{0}</b>), started on <b>{1}<b/> at <b>{2}</b>.
