--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -96,7 +96,7 @@ ${project.parent.artifactId}.result.not.found=The lab result was not found on in
 ${project.parent.artifactId}.orgunit.not.found=The org unit was not found on integration server.
 ${project.parent.artifactId}.typeOfResult.ALL=All
 ${project.parent.artifactId}.typeOfResult.HIVVL=HIV Viral Load
-${project.parent.artifactId}.typeOfResult.CD4=CD4 Count
+${project.parent.artifactId}.typeOfResult.CD4=CD4
 ${project.parent.artifactId}.typeOfResult.TBLAM=TB LAM
 ${project.parent.artifactId}.typeOfResult.CRAG=CRAG
 ${project.parent.artifactId}.syncStatus.lastExecution=Last synchronization completed on <b>{0}</b> at <b>{1}</b>, repeats at each <b>{2}</b>.
