--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -96,7 +96,7 @@ ${project.parent.artifactId}.result.not.found=O resultado laboratorial não foi 
 ${project.parent.artifactId}.orgunit.not.found=A US não foi encontrada no servidor de integração.
 ${project.parent.artifactId}.typeOfResult.HIVVL=Carga Viral HIV
 ${project.parent.artifactId}.typeOfResult.ALL=Todos
-${project.parent.artifactId}.typeOfResult.CD4=CD4 Absoluto
+${project.parent.artifactId}.typeOfResult.CD4=CD4
 ${project.parent.artifactId}.typeOfResult.TBLAM=TB LAM
 ${project.parent.artifactId}.typeOfResult.CRAG=CRAG
 ${project.parent.artifactId}.syncStatus.lastExecution=Última sincronização concluída em <b>{0}</b> as <b>{1}</b>, repete a cada <b>{2}</b>.
